unpackaged/objects/CI_Object_6__c.object
<CustomObject>
	<description>This is the Continuous Integration Object7 - changed desc</description>
	<fields>
		<fullName>CI_Text2__c</fullName>
		<label>CI Text2</label>
		<length>56</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CI_Text_4__c</fullName>
		<label>CI Text 4</label>
		<length>58</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CI_Text__c</fullName>
		<label>CI Text</label>
		<length>55</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CI_text3__c</fullName>
		<label>CI text3</label>
		<length>57</length>
		<type>Text</type>
	</fields>
	<label>Continuous Object 7</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>{0}</displayFormat>
		<label>Continuous Object7  Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>CI Objects 7</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>